external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_extra_comma.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_extra_comma.move:2:14
  │
2 │     struct S<,T> { f: T } // Test a comma before the first type parameter
  │              ^ Unexpected ','. Expected a type parameter
